--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div classs="container">
         <nav>
-            <h2 class = "logo">Port<span>folio.</span></h2>
+            <h2 class = "logo">Personal<span>folio.</span></h2>
             <ul class="navItems">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Bio</a></li>
@@ -19,6 +19,23 @@
             </ul>
             <a href="#" class="btn">DOWNLOAD CV</a>
         </nav>
+        <div class="text">
+            <h4>Welcome, my name is </h4>
+            <h1>Shay <span>Nicolas</span></h1>
+            <h3>I'am Software Engineer</h3>
+            <img src="img/self pic.JPEG" alt="">
+            <div class="info">
+                <form>
+                    <input type="email" name="email" id ="mail" placeholder="Enter your Email">
+                    <input type="submit" name="Submit" value = "submit" >
+                </form>
+            </div>
+        </div>
     </div>
+
+<section class="Home">
+
+</section>
+
 </body>
 </html>
