--- a/pages/experience.html
+++ b/pages/experience.html
@@ -32,19 +32,26 @@
             <div class="box">
                 <img src="img/Free_Sample_By_Wix.jfif" alt="">
                 <h3>Education</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dolores error natus ex iusto atque blanditiis. Impedit consectetur fuga facilis quo enim accusantium porro asperiores autem hic aperiam, eius temporibus.</p>
+                <li>High School: Gradudeted in 2019</li>
+                <li>College: Gradudeted 2022 With AA</li>
+                <p>currently in prosite of a Barchloer degree in Busicess</p>
 
             </div>
             <div class="box">
                 <img src="img/Free_Sample_By_Wix (1).jfif" alt="">
                 <h3>Work</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dolores error natus ex iusto atque blanditiis. Impedit consectetur fuga facilis quo enim accusantium porro asperiores autem hic aperiam, eius temporibus.</p>
+                
+                <li><i class="fab fa-amazon"></i>Amazon 2020-2022</li>
+                <li><i class="fab fa-w"></i>Walmart 2020-2020</li>
+                <li><i class="fab fa-g"></i>GC service 2020-2020</li>
+                <li><i class="fab fa-amazon"></i>FedEx 2019-2020</li>
+                <li><i class="fab fa-amazon"></i>Hardee's 2019-2019</li>
 
             </div>
             <div class="box">
                 <img src="img/Free_Sample_By_Wix (2).jfif" alt="">
                 <h3>Sport</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dolores error natus ex iusto atque blanditiis. Impedit consectetur fuga facilis quo enim accusantium porro asperiores autem hic aperiam, eius temporibus.</p>
+                <p>currently in prosite of a Barchloer degree in Busicess</p>
 
             </div>
         </section>
