need final touch

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -41,17 +41,23 @@
                 <img src="img/Free_Sample_By_Wix (1).jfif" alt="">
                 <h3>Work</h3>
                 
-                <li><i class="fab fa-amazon"></i>Amazon 2020-2022</li>
-                <li><i class="fab fa-w"></i>Walmart 2020-2020</li>
-                <li><i class="fab fa-g"></i>GC service 2020-2020</li>
-                <li><i class="fab fa-amazon"></i>FedEx 2019-2020</li>
-                <li><i class="fab fa-amazon"></i>Hardee's 2019-2019</li>
+                <li></i>Amazon 2020-2022</li>
+                <li></i>Walmart 2020-2020</li>
+                <li>GC service 2020-2020</li>
+                <li>FedEx 2019-2020</li>
+                <li></i>Hardee's 2019-2019</li>
 
             </div>
             <div class="box">
-                <img src="img/Free_Sample_By_Wix (2).jfif" alt="">
-                <h3>Sport</h3>
-                <p>currently in prosite of a Barchloer degree in Busicess</p>
+                <img src="img/Free_Sample_By_Wix (3).jfif" alt="">
+                <h3>LINKS TO PROJECT</h3>
+                <link rel="stylesheet" href="https://github.com/shayNicol/personal-website.git">
+
+                <p><a href="https://github.com/shayNicol/mac-and-windows.git"> Visit to see Mac and Widows project</a></p>
+
+                <p><a href="https://github.com/shayNicol/sneaker-heads.git"> Visit to see sneaker-heads project</a></p>
+
+                <p><a href="https://github.com/shayNicol/travelerz-agency.git"> Visit to see travelerz-agency project</a></p>
 
             </div>
         </section>
