--- a/pages/index.html
+++ b/pages/index.html
@@ -13,9 +13,9 @@
             <h2 class = "logo">Personal<span>folio.</span></h2>
             <ul class="navItems">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Bio</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="bio.html">Bio</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="portfolio2.html">Portfolio</a></li>
             </ul>
             <a href="#" class="btn">DOWNLOAD CV</a>
         </nav>
@@ -23,7 +23,6 @@
             <h4>Welcome, my name is </h4>
             <h1>Shay <span>Nicolas</span></h1>
             <h3>I'am Software Engineer</h3>
-            <img src="img/self pic.JPEG" alt="">
             <div class="info">
                 <form>
                     <input type="email" name="email" id ="mail" placeholder="Enter your Email">
