--- a/pages/experience.html
+++ b/pages/experience.html
@@ -18,7 +18,6 @@
                 <li><a href="bio.html">Bio</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
             <a href="#" class="btn">DOWNLOAD CV</a>
         </nav>
@@ -34,7 +33,7 @@
                 <h3>Education</h3>
                 <li>High School: Gradudeted in 2019</li>
                 <li>College: Gradudeted 2022 With AA</li>
-                <p>currently in prosite of a Barchloer degree in Busicess</p>
+                <p>currently getting my Barchloer degree in Busicess</p>
 
             </div>
             <div class="box">
