--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -18,29 +18,31 @@
                 <li><a href="bio.html">Bio</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html"></a>Contact</li>
             </ul>
             <a href="#" class="btn">DOWNLOAD CV</a>
         </nav>
           </div>
-      </section>
-  </div>
-  <h1>My Skills</h1>
-  <p>HTML</p>
-  <div class="container">
-      <div class="skill html">40%</div>
-  </div>
-
-  <p>CSS</p>
-  <div class="container">
-      <div class="skill html">40%</div>
-  </div>
-
-
-  <p>Javascript</p>
-  <div class="container">
-      <div class="skill php">30%</div>
-  </div>
-
+          <div class="wrapper">
+            <h2 class="how-title"> Bootcamp Skill Progress bar</h2>
+            <br><br>
+            <div class="skill">
+                <p>HTML</p>
+                <div class="skill-bar skill1">
+                    <span class="skill-count1">45%</span>
+                </div>
+            </div>
+            <div class="skill">
+                <p>CSS</p>
+                <div class="skill-bar skill2">
+                    <span class="skill-count2">35%</span>
+                </div>
+            </div>
+            <div class="skill">
+                <p>JAVASCRIPT</p>
+                <div class="skill-bar skill3">
+                    <span class="skill-count3">45%</span>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
