--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
+
+</head>
+<body>
     <div classs="container">
          </div>
         <nav>
