--- a/pages/index.html
+++ b/pages/index.html
@@ -12,12 +12,12 @@
         <nav>
             <h2 class = "logo">Personal<span>folio.</span></h2>
             <ul class="navItems">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="bio.html">Bio</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="portfolio2.html">Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
-            <a href="#" class="btn">DOWNLOAD CV</a>
+            <a href="img/000Resume (0) (1).docx" class="btn">DOWNLOAD CV</a>
         </nav>
         <div class="text">
             <h4>Welcome, my name is </h4>
@@ -25,8 +25,8 @@
             <h3>I'am Software Engineer</h3>
             <div class="info">
                 <form>
-                    <input type="email" name="email" id ="mail" placeholder="Enter your Email">
-                    <input type="submit" name="Submit" value = "submit" >
+                    <!-- <input type="email" name="email" id ="mail" placeholder="Enter your Email"> -->
+                    <!-- <input type="submit" name="Submit" value = "submit" > -->
                 </form>
             </div>
         </div>
